--- a/Biblioteca/DAL/DAL.csproj
+++ b/Biblioteca/DAL/DAL.csproj
@@ -41,12 +41,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutorDAL.cs" />
     <Compile Include="Banco.cs" />
+    <Compile Include="CategoriaDAL.cs" />
+    <Compile Include="CidadeDAL.cs" />
     <Compile Include="ComandoSQL.cs" />
     <Compile Include="Conexao.cs" />
+    <Compile Include="EditoraDAL.cs" />
+    <Compile Include="EmprestimoDAL.cs" />
+    <Compile Include="EstadoDAL.cs" />
+    <Compile Include="HistoricoLeitorDAL.cs" />
+    <Compile Include="LivroDAL.cs" />
     <Compile Include="ParametroSQL.cs" />
-    <Compile Include="UsuarioDAL.cs" />
+    <Compile Include="LeitorDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservaDAL.cs" />
+    <Compile Include="SituacaoDAL.cs" />
+    <Compile Include="TipoLeitorDAL.cs" />
+    <Compile Include="UsuarioDAL.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{88c6afce-999a-4ff1-9833-10e61420cf30}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
